--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.8",
+    "minio": "^7.0.16",
+    "mongodb": "^3.5.9",
+    "path": "^0.12.7",
     "uuid": "^8.1.0"
   }
 }
