--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "mongodb": "^3.5.9",
     "path": "^0.12.7",
     "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
